--- a/merchant-frontend/src/app/components/catalogs/catalogs.component.html
+++ b/merchant-frontend/src/app/components/catalogs/catalogs.component.html
@@ -4,7 +4,7 @@
       <div class="card text-center" style="width: 80%;">
         <div class="card-body">
           <h5 class="card-title">Actualización masiva de productos</h5>
-          <p class="card-text">Asegúrate que tu archivo de excel contanga las cabeceras SKU y CANTIDAD</p>
+          <p class="card-text">Asrgúrate que tu archivo de excel contanga las cabeceras SKU y CANTIDAD</p>
           <input type="file" accept=".xls, .xlsx" id="excelFileInput" style="display: none;">
           <button class="btn btn-success" (click)="loadExcelFile()">Cargar archivo de Excel</button>
           <p>{{ processingMessage }}</p>
